--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bryant's Awesome website</title>
+    <title>Bryant's Super Awesome website</title>
   </head>
   <body>
     <h1>This is my website!</h1>
