changed picture size

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>This is my website!</h1>
     <p>Isn't it <strong>awesome!</strong></p>
-    <p><img src="jake.jpeg" width="451" height="300"></p>
+    <p><img src="jake.jpeg"></p>
     <ol>
       <li>Dad</li>
       <li>Mom</li>
