--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>This is my website!</h1>
     <p>Isn't it <strong>awesome!</strong></p>
+    <!-- made this a generic picture -->
     <p><img src="jake.jpeg"></p>
     <ol>
       <li>Dad</li>
