--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Bryant's Super Awesome website</title>
   </head>
   <body>
-    <h1>This is my website!</h1>
+    <h1>This is my cool website!</h1>
     <p>Isn't it <strong>awesome!</strong></p>
     <!-- made this a generic picture -->
     <p><img src="jake.jpeg"></p>
